update dependencies in pom.xml